# GLnexus

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.alpine  Doxyfile  GLnexus.supp  README.md  _b_c_f_bucket_cache_8h_source.html  _b_c_f_key_value_data_8h_source.html  _b_c_f_serialize_8h_source.html  _key_value_8h_source.html  _rocks_key_value_8h_source.html  alleles_8h_source.html  annotated.html  class_g_lnexus_1_1_allele_depth_helper-members.html  class_g_lnexus_1_1_allele_depth_helper.html  class_g_lnexus_1_1_b_c_f_bucket_cache-members.html  class_g_lnexus_1_1_b_c_f_bucket_cache.html  class_g_lnexus_1_1_b_c_f_bucket_iterator-members.html  class_g_lnexus_1_1_b_c_f_bucket_iterator.html  class_g_lnexus_1_1_b_c_f_bucket_range-members.html  class_g_lnexus_1_1_b_c_f_bucket_range.html  class_g_lnexus_1_1_b_c_f_data-members.html  class_g_lnexus_1_1_b_c_f_data.html  class_g_lnexus_1_1_b_c_f_file_sink-members.html  class_g_lnexus_1_1_b_c_f_file_sink.html  class_g_lnexus_1_1_b_c_f_key_value_data-members.html  class_g_lnexus_1_1_b_c_f_key_value_data.html  class_g_lnexus_1_1_b_c_f_reader-members.html  class_g_lnexus_1_1_b_c_f_reader.html  class_g_lnexus_1_1_b_c_f_scanner-members.html  class_g_lnexus_1_1_b_c_f_scanner.html  class_g_lnexus_1_1_b_c_f_writer-members.html  class_g_lnexus_1_1_b_c_f_writer.html  class_g_lnexus_1_1_bucket_extent-members.html  class_g_lnexus_1_1_bucket_extent.html  class_g_lnexus_1_1_data-members.html  class_g_lnexus_1_1_data.html  class_g_lnexus_1_1_data_cache-members.html  (+99 more)
.github/workflows/: build.yml
.travis/: after_success.sh  before_install.sh  install_valgrind.sh  launch_medium_tests.sh  update_doxygen.sh
capnp/: .gitignore  README.md
capnp/serialize/: defs.capnp
capnp/tut/: tut_example.cpp  tut_proto.capnp
cli/: glnexus_aio.cc  glnexus_cli.cc  glnexus_cli_aio.cc
cli/docker/: build.sh
cli/dxapplet/: Makefile  dxapp.json
cli/dxapplet/src/: code.sh
cli/dxapplet_aio/: Makefile  dxapp.json
cli/dxapplet_aio/src/: code.sh
include/: BCFBucketCache.h  BCFKeyValueData.h  BCFSerialize.h  BCF_utils.h  KeyValue.h  RocksIntf.h  RocksKeyValue.h  alleles.h  alloc_check.h  applet_utils.h  capnp_serialize.h  cli_utils.h  compare.h  compare_iter.h  compare_queries.h  data.h  diploid.h  discovery.h  genotyper.h  genotyper_config.h  genotyper_utils.h  residuals.h  service.h  service_config.h  types.h  unifier.h
perf/: README.md  code_base_app_code.sh  run_standalone_glnexus.sh  setup_standalone_glnexus.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_7.js  all_73.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_64.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_62.js  functions_63.js  functions_69.js  functions_6f.js  functions_7.js  (+8 more)
src/: BCFBucketCache.cc  BCFKeyValueData.cc  BCFKeyValueData.cc.old  BCFKeyValueData_utils.h  BCFSerialize.cc  BCF_utils.cc  KeyValue.cc  RocksIntf.cc  RocksKeyValue.cc  alleles.cc  alloc_check.c  applet_utils.cc  capnp_serialize.cc  cli_utils.cc  compare.cc  compare_queries.cc  data.cc  diploid.cc  discovery.cc  genotyper.cc  genotyper_utils.h  playground.cc  residuals.cc  rock_toy.cc  service.cc  types.cc  unifier.cc
test/: BCFKeyValueData.cc  GLnexus.supp  MemDBTest.cc  RocksDBTest.cc  applet_utils.cc  cli.cc  cli_utils.cc  compare_iter.cc  curated_cases.cc  diploid.cc  genotyper.cc  getting_started.sh  gvcf_test_cases.cc  htslib_behaviors.cc  jemalloc_linking.sh  jemalloc_warning.sh  launch_medium_tests.sh  rocks_behaviors.cc  rocks_integration.cc  service.cc  testOutputVcf.py  types.cc  unifier.cc  utils.cc
test/data/: NA12878D_HiSeqX.21.10009462-10009469.bogus.gvcf  NA12878D_HiSeqX.21.10009462-10009469.gvcf  bad_dna.gvcf  bad_dna2.gvcf  bad_dna3.gvcf  bad_dna4.gvcf  bad_nsample.gvcf  bad_sample.gvcf  bogus_END.gvcf  discover_alleles_trio1.vcf  discover_alleles_trio2.vcf  dv_1000G_ALDH2_gvcf.sh  joint_A.gvcf  joint_B.gvcf  joint_C.gvcf  joint_D.gvcf  long_ref_intervals.gvcf  long_ref_intervals_A.gvcf  long_ref_intervals_B.gvcf  missingdata.vcf  missingdata1.gvcf  sampleset_range1.gvcf  sampleset_range2.gvcf  sampleset_range3.gvcf  sampleset_rnd1.gvcf  sampleset_rnd2.gvcf  synthetic_A.21.gvcf  synthetic_B.21.gvcf  trio_denovo.vcf
test/data/cli/: F1.gvcf  F2.gvcf  vcr_test.bed
test/data/gvcf_test_cases/: DP0_noAD.yml  censor_rnc_format_fields.yml  deepvariant.yml  deepvariant2.yml  deepvariant_norm.yml  discover_alleles_2_trios.yml  discover_alleles_gvcf.yml  discover_alleles_gvcf_bogus.yml  dv_1000G_chr17_2517459.yml  dv_1000G_chr17_8375536.yml  dv_1000G_chr21_5583275.yml  edge_spanning_deletion.yml  edge_spanning_deletion2.yml  edge_spanning_deletion3.yml  format_fields_AD_clear.yml  format_fields_AD_clear_2.yml  format_fields_AD_fallback.yml  format_fields_combi.yml  format_fields_default_missing.yml  format_fields_default_none.yml  format_fields_ignore_non_variants.yml  format_fields_integrated.yml  gvcf_services.yml  gvcf_services_depth12.yml  gvcf_services_depth9.yml  inconsistent_trim.yml  join_3_gvcfs.yml  join_gvcf_vcf.yml  join_gvcf_vcf_gvcf.yml  join_gvcfs.yml  join_records_basic.yml  join_records_formats_basic.yml  join_records_incomplete_span.yml  join_records_insufficient_ref_depth.yml  join_records_overlapping.yml  join_records_overlapping_top2.yml  join_records_prefer_small.yml  join_records_unjoinable.yml  join_vcf_gvcf.yml  lost_deletion.yml  (+16 more)
test/data/mt/: README  synthetic_A.21.gvcf  synthetic_B.21.gvcf  synthetic_C.21.gvcf  synthetic_D.21.gvcf
test/data/special_cases/inconsistent_trim/: inconsistent_trim.yml
test/data/special_cases/join_gvcf/: join_gvcf.yml
test/data/special_cases/join_vcf/: join_vcf.yml
test/data/special_cases/overlap_gvcf/: overlap_gvcf.yml
util/gvcf_multiplier/: dxapp.json
util/gvcf_multiplier/src/: code.py
(+1 files in other folders)
